--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Files and Such needed to automate the process of generating OS Packages for Zenoss 4x
+Information related to Zenoss Packages contributed by the community
+
+http://readthedocs.org/docs/zenoss-community-alliance-package-documentation/en/latest/
